--- a/kmom04/zeus/webroot/css/links.css
+++ b/kmom04/zeus/webroot/css/links.css
@@ -36,7 +36,7 @@ ul.nb-plain a:hover {
   text-decoration: none;
 }
 
-.orderby a {
+.orderby a, .menu a {
   text-decoration: none;
   color: black;
 }
