kmom06: Added the module CImage

--- a/kmom04/zeus/webroot/img/movie/Visa källkod | Eden en webbtemplate_files/source.css
+++ b/kmom04/zeus/webroot/img/movie/Visa källkod | Eden en webbtemplate_files/source.css
@@ -52,3 +52,10 @@
   padding: 0.5em 0.5em 0.5em 0.5em;
   overflow: auto;
 }
+
+code {
+	font-family: monospace;
+  list-style-type: none;
+  padding: 0;
+  margin: 0 0 22px 0;
+}
