--- a/kmom06/zeus/webroot/css/links.css
+++ b/kmom06/zeus/webroot/css/links.css
@@ -6,6 +6,7 @@ ul.nb-plain {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  border-bottom: 1px solid black;
 }
 
 ul.nb-plain li {
@@ -19,24 +20,42 @@ ul.nb-plain li:first-child {
 }
 
 ul.nb-plain li.selected a {
+  margin-right: 0px;
+  margin-left: 0px;
   border-top: 1px solid #333;
-  border-bottom: 1px solid #333;
+  border: 1px solid black;
+  border-bottom: 1px solid white;
 }    
 
 ul.nb-plain a {
+  padding: 1px 4px 0 4px;
   color: #333;
+  margin-right: 1px;
+  margin-left: 1px;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
+  border-bottom: 1px solid #333;
 }  
 
 ul.nb-plain a:hover {
-  border-top: 1px solid #999;
-  border-bottom: 1px solid #999;
+  margin-right: 0px;
+  margin-left: 0px;
+  border: 1px solid #999;
+  border-bottom: 1px solid #fff;
   text-decoration: none;
 }
 
 .orderby a, .menu a {
   text-decoration: none;
   color: black;
+}
+
+a {
+    color: #333;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
