--- a/kmom06/zeus/webroot/css/links.css
+++ b/kmom06/zeus/webroot/css/links.css
@@ -23,12 +23,12 @@ ul.nb-plain li.selected a {
   margin-right: 0px;
   margin-left: 0px;
   border-top: 1px solid #333;
-  border: 1px solid black;
-  border-bottom: 1px solid white;
+  border: 1px solid #000;
+  border-bottom: 1px solid #fff;
 }    
 
 ul.nb-plain a {
-  padding: 1px 4px 0 4px;
+  padding: 1px 4px 1px 1px;
   color: #333;
   margin-right: 1px;
   margin-left: 1px;
