--- a/rm/zeus/webroot/css/breadcrumb.css
+++ b/rm/zeus/webroot/css/breadcrumb.css
@@ -4,7 +4,7 @@
 ul.breadcrumb {
   list-style-type: none;
   padding: 0;
-  margin: 0 0 22px 0;
+  margin: 10px 0px 10px 0px;
 }
 
 ul.breadcrumb li {
