--- a/rm/zeus/webroot/css/navigation.css
+++ b/rm/zeus/webroot/css/navigation.css
@@ -1,60 +1,92 @@
-#navbar {
-  float: left;
+.navbar {
+float: left;
 }
 
 #searchbox {
-  float: right;
+position: absolute;
+bottom: 15px;
+right: 15px;
 }
 
 #navigation {
   width: 100%;
-  overflow: auto;
   border-bottom: solid 1px red; /* inner top border */
   background-color: yellow;
+  position: absolute;
 }
 
+#navContainer{
+  position: relative;
+  height: 58px;
+}
 
 /** --------------------------------------------------------------
- * Navbar: Plain style, nothing special
+ * Navbar: Dropdown menu
  *
  */
-ul.nb-plain {
-  list-style-type: none;
+ 
+.navbar ul {
+  list-style: none; 
+  margin: 0; 
   padding: 0;
-  margin: 0;
 }
-
-ul.nb-plain li {
-  padding: 0 0 0 1em;
-  margin: 0;
-  display: inline;
+ 
+.navbar li {
+  display: inline-block;
+  border-top: 4px solid transparent; 
+  color: #333; 
+  position: relative; 
 }
-
-ul.nb-plain li:first-child {
-  padding-left: 0;
-}
-
-ul.nb-plain li.selected a {
-  margin-right: 0px;
-  margin-left: 0px;
-  background-color: red;
-}    
-
-ul.nb-plain a {
-  padding: 1px 4px 1px 1px;
-  color: #333;
-  margin-right: 1px;
-  margin-left: 1px;
-  font-weight: bold;
+ 
+.navbar a {
+  display: block;
+  width: 100%;
+  padding: 1em;
   text-decoration: none;
-  text-transform: uppercase;
-}  
+  color: inherit;
+  white-space: nowrap; 
+}
 
-ul.nb-plain a:hover {
-  margin-right: 1px;
-  margin-left: 1px;
-  text-decoration: none;
-  background-color: pink;
+.navbar li:hover {
+  color: #666; 
+  border-color: #666;
+} 
+ 
+.navbar li.selected-parent, 
+.navbar li.selected {
+  color: #22f; 
+  border-color: #22f;
+}
+
+.navbar ul ul {
+  background-color: #fff; 
+  padding: 8px; 
+  position: absolute; 
+  left: -9999px; 
+  z-index: 2;
+}
+ 
+.navbar li li {
+  border-top: none;  
+  border-left: 4px solid transparent;  
+}
+
+.navbar li:hover ul {
+  left: 0;
+}
+ 
+.navbar li li:hover {
+  color: #666; 
+  border-color: #666;
+}
+
+.navbar li li.selected {
+  color: #22f; 
+  border-color: #22f;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .orderby a, .menu a {
