--- a/rm/zeus/webroot/css/style.css
+++ b/rm/zeus/webroot/css/style.css
@@ -18,6 +18,7 @@ html {
 body {
   color: #333;
   font-family: arial, sans-serif;
+  margin: 0;
 }
  
 /**
@@ -26,7 +27,7 @@ body {
 #wrapper {
   margin: 0 auto;
   width: 980px; 
-  padding: 10px;
+  padding: 0 auto;
 }
 .subtitle{
   margin-top: -10px;
@@ -40,6 +41,12 @@ body {
 #header {
   position: relative;
   margin-bottom: 10px;
+}
+#headerBg{
+  width: 100%;
+  height: 57px;
+  position: absolute;
+  background-color: #222;
 }
  
 .sitetitle {
@@ -56,6 +63,7 @@ body {
   font-style: italic;
   color: #666;
 }
+
  
  
 /**
@@ -63,7 +71,6 @@ body {
  */
 #main {
   min-height: 20em;
-  overflow: auto;
 }
  
  
@@ -73,7 +80,7 @@ body {
 #footer {
   margin-top: 40px;
   border-top: 1px solid #ccc;
-  padding-top: 15px;
+  padding: 15px;
 }
  
 .sitefooter {
