--- a/rm/zeus/webroot/css/style.css
+++ b/rm/zeus/webroot/css/style.css
@@ -44,7 +44,7 @@ body {
 }
 #headerBg{
   width: 100%;
-  height: 57px;
+  height: 52px;
   position: absolute;
   background-color: #222;
 }
@@ -71,7 +71,7 @@ body {
  */
 #main {
   min-height: 20em;
-}
+  overflow: auto;}
  
  
 /**
@@ -116,9 +116,6 @@ aside{
 }
 .hasSide{
   width : 760px;
-}
-.main{
-  overflow: auto;
 }
 .right{ 
   float: right;
