--- a/rm/zeus/webroot/css/filmer.css
+++ b/rm/zeus/webroot/css/filmer.css
@@ -3,6 +3,9 @@
  * Movies: Every seperate movie
  *
  */
+ div.movieOverview{
+  overflow: auto;
+ }
   div.movie{
   	width: 240px;
   	float:left;
@@ -57,25 +60,73 @@
   text-align: center;
   margin-top: 10px;
 }
+
+.noTrailingSpace{
+    -webkit-margin-after: 0.2em;
+}
+
+/** --------------------------------------------------------------
+ * OverviewSearch
+ *
+ */
+ button.search{
+  border: 1px solid #444;
+  border-radius: 7px;
+  padding: 5px;
+  width: 80px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: smaller;
+  text-transform: uppercase;
+ }
+.overviewMovies .searchbox{
+  border: 1px solid #777;
+  border-radius: 7px
+}
+.overviewMovies{
+  border: 2px solid #333;
+  border-radius: 15px;
+  padding: 10px;
+}
 .overviewSearch{
-	background-color: pink;
-	margin: 0px;
-	padding: 0px;
+
+
 }
 .overviewGenre{
-	background-color: #3cc;
-	margin: 0px;
-	padding: 0px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+
 }
 .overviewSort{
-	background-color: #f2c;	
-	margin: 0px;
-	padding: 0px;
+
+}
+.showAll{
+  float: right;
+
+}
+.sortlist ul{
+
+}
+.overviewGenre ul.genreList li{
+  background-color: #222;
+  text-align: center;
+  padding: 5px;
+  margin: 2px;
+}
+.overviewGenre ul.genreList li:first-child{
+  background-color: #222;
+  text-align: center;
+  padding: 5px;
+  margin: 2px;
+}
+.overviewGenre ul.genreList li:hover{
+  background-color: #ccc;
 }
 
 
 nav.galleryDropDown{
-	float: right;
+  text-align: right;
   margin: 10px 0px 10px 0px;
   color: #666;
   font-size: 0.85em;
@@ -98,8 +149,9 @@ ul.genreList {
 
 ul.genreList li {
   padding: 0 0 0 2px;
-  margin: 0;
+  margin: 5px;
   display: inline;
+  border-radius: 2px;
 }
 
 ul.genreList li:first-child {
@@ -109,7 +161,6 @@ ul.genreList li:first-child {
 ul.genreList li.selected a {
   margin-right: 0px;
   margin-left: 0px;
-  background-color: red;
 }    
 
 ul.genreList a {
@@ -125,8 +176,8 @@ ul.genreList a:hover {
   margin-right: 1px;
   margin-left: 1px;
   text-decoration: none;
-  background-color: pink;
 }
+
 
 .orderby a, .menu a {
   text-decoration: none;
@@ -160,35 +211,33 @@ ul.sortList {
 }
 
 ul.sortList li {
-  padding: 0 0 0 2px;
-  margin: 0;
+  padding: 3px;
+  margin: 2px;
   display: inline;
+}
+ul.sortList li:hover {
+
+  background-color: #ccc;
 }
 
 ul.sortList li:first-child {
   padding-left: 0;
 }
 
-ul.sortList li.selected a {
-  margin-right: 0px;
-  margin-left: 0px;
-  background-color: red;
+ul.sortList li.selected {
+  background-color: #999;
 }    
 
 ul.sortList a {
-  padding: 1px 1px 1px 1px;
+
   color: #333;
-  margin-right: 1px;
-  margin-left: 1px;
+
   text-decoration: none;
   text-transform: lowercase;
 }  
 
 ul.sortList a:hover {
-  margin-right: 1px;
-  margin-left: 1px;
   text-decoration: none;
-  background-color: pink;
 }
 
 .orderby a, .menu a {
