--- a/rm/zeus/webroot/css/navigation.css
+++ b/rm/zeus/webroot/css/navigation.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,500,100,400,400italic,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400);
 
 .navbar {
   
@@ -25,12 +25,12 @@
   background-color: #222;
   color: #fff;
   position: absolute;
-  height: 52px;
+  height: 60px;
 }
 
 #navContainer{
   position: relative;
-  height: 52px;
+  height: 60px;
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
@@ -40,6 +40,11 @@
 }
 #navlogo {
   float: left;
+  line-height: 60px;
+} 
+#navlogo img {
+  
+  vertical-align: middle;
 }
 
 /** --------------------------------------------------------------
@@ -66,8 +71,8 @@
   text-decoration: none;
   color: inherit;
   white-space: nowrap; 
-  height: 52px;
-  line-height: 52px;
+  height: 60px;
+  line-height: 60px;
 }
 .navbar a:hover {
   text-decoration: none;
@@ -121,7 +126,6 @@ li.submenu{
 }
 
 .navbar li li.selected {
-  color: red; 
 }
 
 .italic {
