--- a/rm/zeus/webroot/css/style.css
+++ b/rm/zeus/webroot/css/style.css
@@ -3,6 +3,11 @@
  */
 @import url(navigation.css);
 
+/**
+ * Fonts
+ */
+@import url(http://fonts.googleapis.com/css?family=Roboto);
+
 
 /* HTML5 ELEMENTS */
   header,footer,nav,article,section,aside,figure,figcaption,output{display:block;}
@@ -17,7 +22,7 @@ html {
 }
 body {
   color: #333;
-  font-family: arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
 }
  
@@ -44,7 +49,7 @@ body {
 }
 #headerBg{
   width: 100%;
-  height: 52px;
+  height: 60px;
   position: absolute;
   background-color: #222;
 }
@@ -107,6 +112,9 @@ body {
 }
 .center{
   text-align: center;
+}
+.fullWidth{
+  width: 100%;
 }
 
 /**------------------------------------------------------- 
