--- a/rm/zeus/webroot/css/kalender.css
+++ b/rm/zeus/webroot/css/kalender.css
@@ -3,13 +3,23 @@
 	top: -150px;
 	text-align: center;
 	width: 100%;
-   	color: white;
-	font-size: 150%;
-	background-color: grey;
+   	color: #ccc;
+	font-size: 100%;
+	background-color: #222;
+   	text-transform: uppercase;
 	opacity: 0.9;
+	padding-top:7px;
+	padding-bottom:7px;
+}
+.textOver a{
+	color: #ccc;
+}
+.textOver a:hover{
+	color: #cc3333;
 }
 .monthMovieTitle{
-   font-size: 250%;
+   font-size: 200%;
+   color: #fff;
 }
 div.month {
 	width: 978px;
@@ -19,6 +29,9 @@ div.month {
 div.calNav{
 	border-bottom: 1px solid black;
 	overflow: auto;
+	padding: 4px;
+	text-transform: uppercase;
+	font-size: small;
 }
 div.calNavLeft{
 	float: left;
@@ -28,21 +41,26 @@ div.calNavRight{
 	float: right;
 }
 div.monthHeading {
-	background-color: #2d882d;
+	background-color: #cc3333;
 	border-bottom: 1px solid black;
+	border-top: 1px solid black;
+	color: #fff;
+	padding: 4px;
+	text-transform: uppercase;
 }
 div.week, div.infoLine {
 	border-bottom: 1px solid black;
 	overflow: auto;
+	font-size: small;
 }
 div.infoLine {
-	font-size: large;
+	font-size: 100%;
+	text-transform: uppercase;
 }
 div.weekNo {
 	float: left;
 	width: 30px;
 	text-align: center;
-	font-weight: bold;
 }
 div.day, div.dayTopline {
 	width: 134px;
