--- a/rm/zeus/webroot/css/nyheter.css
+++ b/rm/zeus/webroot/css/nyheter.css
@@ -1,3 +1,41 @@
 .PageNavigation{
 	text-align: center;
 }
+p{
+
+}
+.created{
+	font-size: 0.85em;
+	text-decoration: none;
+	color: #666;
+}
+h1{
+	margin-bottom: 0px;
+}
+nav h1{
+	text-transform: uppercase;
+}
+
+ul.categories{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+  border-top: 1px solid black;
+}
+ul.categories li{
+	padding: 8px;
+	margin: 4px;
+}
+ul.categories li:hover{
+
+}
+ul.categories li a{
+	padding: 8px;
+
+}
+ul.categories li a:hover{
+	border: 2px solid #222;
+	padding: 6px;
+	border-radius: 20px;
+}
